@@ -49,12 +49,6 @@ PATCHES PROPOSED TO BACKPORT FROM TRUNK:
     Jira: https://issues.apache.org/jira/browse/TS-868
     +1: igalic, zwoop, amc
 
-  * HTTP: Built in error for host not found looks like Internet Explorer
-          error.
-    Trunk patch: http://svn.apache.org/viewvc?rev=1143116&view=rev
-    Jira: https://issues.apache.org/jira/browse/TS-860
-    +1: zwoop, igalic, amc
-
 RELEASE PROCESS
 
 The Traffic Server release process is documented at
