@@ -1480,33 +1480,14 @@ HttpTransact::ReDNSRoundRobin(State* s)
                          //"the server does not have a DNS entry.  Perhaps there is "
                          //"a misspelling in the server name, or the server no "
                          //"longer exists.  Double-check the name and try again."),
-                         ("<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 3.2 Final//EN\"><html><head>"
-                          "<style>a:link {font:8pt/11pt verdana; color:red}a:visited {font:8pt/11pt verdana; color:#4e4e4e}"
-                          "</style><meta HTTP-EQUIV=\"Content-Type\" Content=\"text-html; charset=Windows-1252\"><title>"
-                          "Cannot find server</title></head><body bgcolor=\"white\"><table width=\"400\" cellpadding=\"3\" "
-                          "cellspacing=\"5\"><tr><td id=\"tableProps2\" align=\"left\" valign=\"middle\" width=\"360\">"
-                          "<h1 id=\"textSection1\"style=\"COLOR: black; FONT: 13pt/15pt verdana\"><span id=\"errorText\">"
-                          "The page cannot be displayed</span></h1></td></tr><tr><td id=\"tablePropsWidth\" width=\"400\""
-                          " colspan=\"2\"><font style=\"COLOR: black; FONT: 8pt/11pt verdana\">The page you are looking "
-                          "for is currently unavailable. The Web site might be experiencing technical difficulties, "
-                          "or you may need to adjust your browser settings.</font></td></tr><tr><td id=\"tablePropsWidth\""
-                          " width=\"400\" colspan=\"2\"><font id=\"LID1\"style=\"COLOR: black; FONT: 8pt/11pt verdana\">"
-                          "<hr color=\"#C0C0C0\" noshade><p id=\"LID2\">Please try the following:</p><ul>"
-                          "<li id=\"instructionsText1\">Click the Refresh button, or try again later.</li><li id="
-                          "\"instructionsText2\"> If you typed the page address in the Address bar, make sure that it is "
-                          "spelled correctly. <br></li><li id=\"instructionsText3\">To check your connection settings, click the"
-                          "<b>Tools</b> "
-                          "menu, and then click <b>Internet Options</b>. On the <b>Connections</b> tab, click <b>Settings</b>."
-                          " The settings should match those provided by your local area network (LAN) administrator or "
-                          "Internet service provider (ISP).</li><li id=\"instructionsText5\">Some sites require 128-bit "
-                          "connection security. Click the <b>Help</b> menu and then click <b> About Internet Explorer </b>"
-                          " to determine what strength security you have installed.</li><li id=\"instructionsText4\">"
-                          "If you are trying to reach a secure site, make sure your Security settings can support it. "
-                          "Click the <B>Tools</b> menu, and then click <b>Internet Options</b>.  On the Advanced tab, "
-                          "scroll to the Security section and check settings for SSL 2.0, SSL 3.0, TLS 1.0, PCT 1.0.</li>"
-                          "<li id=\"list3\">Click the Back button to try another link.</li></ul><p><br></p><h2 id=\"PEText\""
-                          " style=\"font:8pt/11pt verdana; color:black\">502 - Cannot find server or DNS Error [reDNS]</h2></font>"
-                          "</td></tr> </table></body></html>"), s->server_info.name);
+                         ("<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 3.2 Final//EN\">"
+                          "<HTML><HEAD><TITLE>Unknown Host</TITLE></HEAD><BODY BGCOLOR=\"white\" FGCOLOR=\"black\">"
+                          "<H1>Unknown Host</H1><HR>"
+                          "<FONT FACE=\"Helvetica,Arial\"><B>"
+                          "Description: Unable to locate the server named \"<EM>%s</EM>\" --- "
+                          "the server does not have a DNS entry.  Perhaps there is a misspelling "
+                          "in the server name, or the server no longer exists.  Double-check the "
+                          "name and try again.</B></FONT><HR></BODY></HTML>"), s->server_info.name);
     s->cache_info.action = CACHE_DO_NO_ACTION;
     s->next_action = PROXY_SEND_ERROR_CACHE_NOOP;
     //  s->next_action = PROXY_INTERNAL_CACHE_NOOP;
@@ -1599,33 +1580,15 @@ HttpTransact::OSDNSLookup(State* s)
                            //"the server does not have a DNS entry.  Perhaps there is "
                            //"a misspelling in the server name, or the server no "
                            //"longer exists.  Double-check the name and try again."),
-                           ("<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 3.2 Final//EN\"><html><head>"
-                            "<style>a:link {font:8pt/11pt verdana; color:red}a:visited {font:8pt/11pt verdana; color:#4e4e4e}"
-                            "</style><meta HTTP-EQUIV=\"Content-Type\" Content=\"text-html; charset=Windows-1252\"><title>"
-                            "Cannot find server</title></head><body bgcolor=\"white\"><table width=\"400\" cellpadding=\"3\" "
-                            "cellspacing=\"5\"><tr><td id=\"tableProps2\" align=\"left\" valign=\"middle\" width=\"360\">"
-                            "<h1 id=\"textSection1\"style=\"COLOR: black; FONT: 13pt/15pt verdana\"><span id=\"errorText\">"
-                            "The page cannot be displayed</span></h1></td></tr><tr><td id=\"tablePropsWidth\" width=\"400\""
-                            " colspan=\"2\"><font style=\"COLOR: black; FONT: 8pt/11pt verdana\">The page you are looking "
-                            "for is currently unavailable. The Web site might be experiencing technical difficulties, "
-                            "or you may need to adjust your browser settings.</font></td></tr><tr><td id=\"tablePropsWidth\""
-                            " width=\"400\" colspan=\"2\"><font id=\"LID1\"style=\"COLOR: black; FONT: 8pt/11pt verdana\">"
-                            "<hr color=\"#C0C0C0\" noshade><p id=\"LID2\">Please try the following:</p><ul>"
-                            "<li id=\"instructionsText1\">Click the Refresh button, or try again later.</li><li id="
-                            "\"instructionsText2\"> If you typed the page address in the Address bar, make sure that it is "
-                            "spelled correctly. <br></li><li id=\"instructionsText3\">To check your connection settings, click the"
-                            "<b>Tools</b> "
-                            "menu, and then click <b>Internet Options</b>. On the <b>Connections</b> tab, click <b>Settings</b>."
-                            " The settings should match those provided by your local area network (LAN) administrator or "
-                            "Internet service provider (ISP).</li><li id=\"instructionsText5\">Some sites require 128-bit "
-                            "connection security. Click the <b>Help</b> menu and then click <b> About Internet Explorer </b>"
-                            " to determine what strength security you have installed.</li><li id=\"instructionsText4\">"
-                            "If you are trying to reach a secure site, make sure your Security settings can support it. "
-                            "Click the <B>Tools</b> menu, and then click <b>Internet Options</b>.  On the Advanced tab, "
-                            "scroll to the Security section and check settings for SSL 2.0, SSL 3.0, TLS 1.0, PCT 1.0.</li>"
-                            "<li id=\"list3\">Click the Back button to try another link.</li></ul><p><br></p><h2 id=\"PEText\""
-                            " style=\"font:8pt/11pt verdana; color:black\">502 - Cannot find server or DNS Error [%s:%d]</h2></font>"
-                            "</td></tr> </table></body></html>"), s->server_info.name, host_name_expansion);
+                          ("<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 3.2 Final//EN\">"
+                          "<HTML><HEAD><TITLE>Unknown Host</TITLE></HEAD><BODY BGCOLOR=\"white\" FGCOLOR=\"black\">"
+                          "<H1>Unknown Host</H1><HR>"
+                          "<FONT FACE=\"Helvetica,Arial\"><B>"
+                          "Description: Unable to locate the server named \"<EM>%s (%d)</EM>\" --- "
+                          "the server does not have a DNS entry.  Perhaps there is a misspelling "
+                          "in the server name, or the server no longer exists.  Double-check the "
+                          "name and try again.</B></FONT><HR></BODY></HTML>")
+                           , s->server_info.name, host_name_expansion);
       // s->cache_info.action = CACHE_DO_NO_ACTION;
       TRANSACT_RETURN(PROXY_SEND_ERROR_CACHE_NOOP, NULL);
       break;
