@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 
 Changes with Apache Traffic Server 3.0.1
+  *) [TS-860] Built in error for host not found looks like Internet Explorer
+    error. Author: William Bardwell 
+
   *) [TS-875]: TSFetchRestpGet(), TSFetchPageResptGet() and TSFetchUrl() have
     incorrect asserts. Author: Manjesh Nilange 
 
